The basci cards design in css

--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -12,7 +12,7 @@
     <form>
         <ul>
             <label for="email">
-                email:<input type="text" ,name="email" placeholder="name@email.com">
+                email:<input type="text" name="email" placeholder="name@email.com">
             </label>
         </ul>
         <ul>
